--- a/NLog.Elmah.Example/NLog.Elmah.Example.csproj
+++ b/NLog.Elmah.Example/NLog.Elmah.Example.csproj
@@ -54,6 +54,7 @@
     <None Include="App.config" />
     <None Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
