--- a/NLog.Elmah.Example/NLog.config
+++ b/NLog.Elmah.Example/NLog.config
@@ -12,9 +12,18 @@
    -->
   <targets>
     <!-- add your targets here -->
-    <target xsi:type="Elmah" name="elmah" layout="${longdate} ${uppercase:${level}} ${message}" />
+    <target xsi:type="Elmah"
+            name="elmahWithoutLogLevelAsType"
+            layout="${longdate} ${uppercase:${level}} ${message}"/>
     
-    <target xsi:type="File" name="file" fileName="${basedir}/logs/${shortdate}.log"
+    <target xsi:type="Elmah" 
+            name="elmahWithLogLevelAsType" 
+            layout="${longdate} ${uppercase:${level}} ${message}"
+            LogLevelAsType="true"/>
+    
+    <target xsi:type="File" 
+            name="file" 
+            fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
 
   </targets>
@@ -22,7 +31,8 @@
   <rules>
     <!-- add your logging rules here -->
     
-    <logger name="*" minlevel="Trace" writeTo="elmah" />
+    <logger name="*" minlevel="Trace" writeTo="elmahWithLogLevelAsType" />
+    <logger name="*" minlevel="Trace" writeTo="elmahWithoutLogLevelAsType" />
 
   </rules>
 </nlog>
