--- a/NLog.Contrib.Tests/NLog.Contrib.Tests.csproj
+++ b/NLog.Contrib.Tests/NLog.Contrib.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1EF270BC-EC8C-444B-9D05-B2F6C234F704}</ProjectGuid>
+    <ProjectGuid>{0E762CA9-7F28-4332-98B6-BABC14ED4F04}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NLogContrib</RootNamespace>
-    <AssemblyName>NLogContrib</AssemblyName>
+    <RootNamespace>NLog.Contrib.Tests</RootNamespace>
+    <AssemblyName>NLog.Contrib.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -33,7 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.1.2\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\packages\NLog.2.1.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,12 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LayoutRenderers\MdlcLayoutRenderer.cs" />
-    <Compile Include="MappedDiagnosticsLogicalContext.cs" />
+    <Compile Include="LayoutRenderers\MdlcLayoutRendererTests.cs" />
+    <Compile Include="MappedDiagnosticsLogicalContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NLog.Contrib\NLog.Contrib.csproj">
+      <Project>{ec174414-b880-447d-9acf-3ebf88ce261b}</Project>
+      <Name>NLog.Contrib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
