Update Nuspec files

--- a/NLog.Elmah/NLog.Elmah.nuspec
+++ b/NLog.Elmah/NLog.Elmah.nuspec
@@ -1,17 +1,24 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
+    <id>NLog.Elmah</id>
     <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <title>NLog.Elmah</title>
+    <authors>NLog</authors>
+    <owners>NLog</owners>
     <licenseUrl>https://github.com/NLog/NLog-Contrib/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/NLog/NLog-Contrib</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
+    <description>Integrates NLog with ELMAH</description>
     <releaseNotes>Community contributed custom target for NLog.</releaseNotes>
     <copyright>Copyright 2013</copyright>
     <tags>nlog target elmah</tags>
   </metadata>
+  <files>
+    <file src='bin\release\*.dll' target="lib\net45" />
+  </files>
+  <dependencies>
+  	<dependency id="NLog" version="2.0.1.2" />
+  	<dependency id="elmah.corelibrary" version="1.2.2" />
+  </dependencies>
 </package>
