--- a/NLog.Elmah.Example/packages.config
+++ b/NLog.Elmah.Example/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NLog" version="2.0.1.2" targetFramework="net45" requireReinstallation="True" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net35" />
 </packages>
