--- a/NLog.Windows.Forms/NLog.Windows.Forms.csproj
+++ b/NLog.Windows.Forms/NLog.Windows.Forms.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="FormControlTarget.cs" />
     <Compile Include="FormHelper.cs" />
+    <Compile Include="MessageBoxTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RichTextBoxTarget.cs" />
   </ItemGroup>
