--- a/NLog.ManualFlush/NLog.ManualFlush.nuspec
+++ b/NLog.ManualFlush/NLog.ManualFlush.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package >
   <metadata>
     <id>NLog.ManualFlush</id>
@@ -18,6 +18,6 @@
     </dependencies>
   </metadata>
   <files>
-  	<file src='bin\release\*.dll' target="lib\net45" />
+  	<file src='bin\release\*.dll' target="lib\net35" />
   </files>
 </package>
